# napari-basicpy

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: index.md
src/napari_basicpy/: __init__.py  _dock_widget.py  _mock_basic.py  _sample_data.py  _version.py  _widget.py  _writer.py  napari.yaml  test.py  utils.py
src/napari_basicpy/_tests/: test_dock_widget.py  test_sample_data.py  test_widget.py
src/napari_pybasic/: _dock_widget.py
src/napari_pybasic/_tests/: test_dock_widget.py
