[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/napari_basicpy/_version.py"

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line_length = 120

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project]
name = "napari-basicpy"
dynamic = ["version"]
description = "BaSiCPy illumination correction for napari"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Yu Liu", email = "liuyu9671@gmail.com" },
    { name = "Tim Morello", email = "tdmorello@gmail.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
    "numpy",
    "qtpy",
    "aicsimageio",
    "basicpy>=2.0.0",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/peng-lab/napari-basicpy"
Bug-Tracker = "https://github.com/peng-lab/napari-basicpy/issues"
Documentation = "https://github.com/peng-lab/napari-basicpy"
Source = "https://github.com/peng-lab/napari-basicpy"
Support = "https://github.com/peng-lab/napari-basicpy/issues"

[project.entry-points."napari.manifest"]
napari_basicpy = "napari_basicpy:napari.yaml"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-black",
    "flake8-docstrings",
    "flake8-isort",
    "isort",
    "mypy",
    "pre-commit",
    "pydocstyle",
    "pytest",
    "pytest-qt"
]
testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "napari"
]
tox-testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "napari",
    "pyqt5"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]