[metadata]
name = napari_basicpy
description = BaSiCPy illumination correction for napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdmorello/napari-basicpy
author = Tim Morello
author_email = tdmorello@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/tdmorello/napari-basicpy/issues
    Documentation = https://github.com/tdmorello/napari-basicpy#README.md
    Source Code = https://github.com/tdmorello/napari-basicpy
    User Support = https://github.com/tdmorello/napari-basicpy/issues

[options]
packages = find:
install_requires =
    git+https://github.com/peng-lab/BaSiCPy@dev
    napari-plugin-engine>=0.1.4
    numpy
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari_basicpy = napari_basicpy:napari.yaml

[options.extras_require]
dev =
    black
    flake8
    flake8-black
    flake8-docstrings
    flake8-isort
    isort
    mypy
    napari[all]
    pre-commit
    pydocstyle
    pytest
    pytest-qt
mock =
    scikit-image

[options.package_data]
napari_basicpy = napari.yaml
