[metadata]
name = napari-basicpy
version = file: VERSION
description = BaSiCPy illumination correction for napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdmorello/napari-basicpy
author = Tim Morello
author_email = tdmorello@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/tdmorello/napari-basicpy/issues
    Documentation = https://github.com/tdmorello/napari-basicpy#README.md
    Source Code = https://github.com/tdmorello/napari-basicpy
    User Support = https://github.com/tdmorello/napari-basicpy/issues

[options]
packages = find:
install_requires =
    basicpy
    numpy
    qtpy
python_requires = >=3.8
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari_basicpy = napari_basicpy:napari.yaml

[options.extras_require]
dev =
    black
    flake8
    flake8-black
    flake8-docstrings
    flake8-isort
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
    pytest-qt

testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml
